InternexDev_Sandbox/src/objects/Cheque__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cheques</relationshipLabel>
        <relationshipName>Check</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <label>Batch #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_Amount__c</fullName>
        <label>Instrument Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cheque_Comments__c</fullName>
        <label>Instrument Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cheque_Due_Date__c</fullName>
        <label>Instrument Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cheque_Key__c</fullName>
        <externalId>true</externalId>
        <label>Cheque Key</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_Received_Date__c</fullName>
        <label>Instrument Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cheque_Status__c</fullName>
        <label>Instrument Status</label>
        <picklist>
            <picklistValues>
                <fullName>Received &amp; Banked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received &amp; Sent for Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funds Received &amp; Unapplied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funds Received &amp; Applied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned To Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received But Not Banked</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Bounced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Bank_Account_No__c</fullName>
        <label>Customer Bank Account #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Routing__c</fullName>
        <formula>Web_Cash__r.Item_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DD Routing#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Date__c</fullName>
        <label>Deposit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Slip__c</fullName>
        <label>Deposit Slip #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFSC_Code__c</fullName>
        <label>IFSC Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instrument_Type__c</fullName>
        <label>Instrument Type</label>
        <picklist>
            <picklistValues>
                <fullName>CHEQUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsPaymentCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPaymentCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTransactionSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsTransactionSelected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MICR__c</fullName>
        <label>MICR</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payable_At__c</fullName>
        <label>Payable At</label>
        <picklist>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out Station</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Selected_Cheque_Amount__c</fullName>
        <label>Selected Cheque Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suggested_Customer_Account__c</fullName>
        <label>Suggested Customer Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Applied__c</fullName>
        <formula>IF( Cheque_Amount__c =  Total_Selected_Cheque_Amount__c , True , False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Selected_Cheque_Amount__c</fullName>
        <label>Total Selected Cheque Amount</label>
        <summarizedField>Cheque_Invoice_Matrix__c.Applied_Balance__c</summarizedField>
        <summaryForeignKey>Cheque_Invoice_Matrix__c.Cheque__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Value_Date__c</fullName>
        <label>Value Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Web_Cash__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To fetch other formula fields, inserted through file upload</description>
        <label>Web Cash</label>
        <referenceTo>Web_Cash__c</referenceTo>
        <relationshipLabel>Checks</relationshipLabel>
        <relationshipName>Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cheque</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Cheques_Due_For_Today</fullName>
        <columns>Batch_Number__c</columns>
        <columns>NAME</columns>
        <columns>Cheque_Amount__c</columns>
        <columns>Cheque_Received_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Bank_Name__c</columns>
        <columns>Cheque_Status__c</columns>
        <columns>Instrument_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cheque_Due_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Cheques Due For Today</label>
    </listViews>
    <listViews>
        <fullName>Cheques_with_Invoices</fullName>
        <columns>Batch_Number__c</columns>
        <columns>NAME</columns>
        <columns>Cheque_Received_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Cheque_Amount__c</columns>
        <columns>Cheque_Due_Date__c</columns>
        <columns>Cheque_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsTransactionSelected__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Cheques with Invoices</label>
    </listViews>
    <listViews>
        <fullName>Instrument_Banked_Funds_Applied</fullName>
        <columns>Batch_Number__c</columns>
        <columns>NAME</columns>
        <columns>Cheque_Received_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Cheque_Amount__c</columns>
        <columns>Cheque_Due_Date__c</columns>
        <columns>IsTransactionSelected__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cheque_Status__c</field>
            <operation>equals</operation>
            <value>Funds Received &amp; Applied</value>
        </filters>
        <label>Instrument Banked &amp; Funds Applied</label>
    </listViews>
    <listViews>
        <fullName>Instrument_Banked_but_Payment_Unapplied</fullName>
        <columns>Batch_Number__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Cheque_Amount__c</columns>
        <columns>Cheque_Received_Date__c</columns>
        <columns>Cheque_Due_Date__c</columns>
        <columns>Cheque_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsPaymentCreated__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Cheque_Status__c</field>
            <operation>equals</operation>
            <value>Funds Received &amp; Unapplied</value>
        </filters>
        <label>Instrument Banked But Payment Unapplied</label>
    </listViews>
    <listViews>
        <fullName>Instrument_Received_Banked</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>Batch_Number__c</columns>
        <columns>NAME</columns>
        <columns>Cheque_Received_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Cheque_Amount__c</columns>
        <columns>Cheque_Due_Date__c</columns>
        <columns>IsTransactionSelected__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cheque_Status__c</field>
            <operation>equals</operation>
            <value>Received &amp; Banked</value>
        </filters>
        <label>Instrument Received &amp; Banked</label>
    </listViews>
    <listViews>
        <fullName>Instrument_Received_Not_sent_to_bank</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>Batch_Number__c</columns>
        <columns>NAME</columns>
        <columns>Cheque_Received_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Cheque_Amount__c</columns>
        <columns>Cheque_Due_Date__c</columns>
        <columns>Cheque_Status__c</columns>
        <columns>IsTransactionSelected__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cheque_Status__c</field>
            <operation>equals</operation>
            <value>Received But Not Banked</value>
        </filters>
        <label>Instrument Received &amp; Not sent to bank</label>
    </listViews>
    <listViews>
        <fullName>Instrument_Received_Sent_for_Banking</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>Batch_Number__c</columns>
        <columns>NAME</columns>
        <columns>Cheque_Received_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Cheque_Amount__c</columns>
        <columns>Cheque_Due_Date__c</columns>
        <columns>Cheque_Status__c</columns>
        <columns>IsTransactionSelected__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cheque_Status__c</field>
            <operation>equals</operation>
            <value>Received &amp; Sent for Banking</value>
        </filters>
        <label>Instrument Received &amp; Sent for Banking</label>
    </listViews>
    <listViews>
        <fullName>cheques_without_Invoices</fullName>
        <columns>Batch_Number__c</columns>
        <columns>NAME</columns>
        <columns>Cheque_Received_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Cheque_Amount__c</columns>
        <columns>Cheque_Due_Date__c</columns>
        <columns>Cheque_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsTransactionSelected__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>cheques without Invoices</label>
    </listViews>
    <nameField>
        <label>Instrument#</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cheques</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>The_Instrument_Number_should_be_6_Digits</fullName>
        <active>true</active>
        <description>The Instrument Number should be 6 Digits (mandatory). Else, an error needs to be thrown out</description>
        <errorConditionFormula>LEN( Name ) &lt; 6</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Instrument Number can&apos;t be less than 6 digits</errorMessage>
    </validationRules>
</CustomObject>